Oppdatert til bruk av inntektsmeldingRequest fra bibliotek