@@ -3,29 +3,29 @@ package no.nav.dolly.bestilling.inntektsmelding.mapper;
 import ma.glasnost.orika.CustomMapper;
 import ma.glasnost.orika.MapperFactory;
 import ma.glasnost.orika.MappingContext;
-import no.nav.dolly.bestilling.inntektsmelding.domain.InntektsmeldingRequest;
-import no.nav.dolly.domain.resultset.inntektsmeldingstub.AarsakTilInnsendingType;
 import no.nav.dolly.domain.resultset.inntektsmeldingstub.RsInntektsmelding;
 import no.nav.dolly.mapper.MappingStrategy;
+import no.nav.testnav.libs.dto.dokarkiv.v1.RsJoarkMetadata;
+import no.nav.testnav.libs.dto.inntektsmeldinggeneratorservice.v1.RsInntektsmeldingRequest;
+import no.nav.testnav.libs.dto.inntektsmeldinggeneratorservice.v1.enums.AarsakInnsendingKodeListe;
+import no.nav.testnav.libs.dto.inntektsmeldinggeneratorservice.v1.rs.RsAvsendersystem;
+import no.nav.testnav.libs.dto.inntektsmeldinggeneratorservice.v1.rs.RsKontaktinformasjon;
+import no.nav.testnav.libs.dto.inntektsmeldingservice.v1.requests.InntektsmeldingRequest;
 import org.springframework.stereotype.Component;
 
 import java.time.LocalDateTime;
 
 import static java.util.Objects.isNull;
 import static java.util.Objects.nonNull;
-import static no.nav.dolly.bestilling.inntektsmelding.domain.InntektsmeldingRequest.Avsendersystem;
 import static no.nav.dolly.bestilling.inntektsmelding.domain.InntektsmeldingRequest.Avsendertype;
-import static no.nav.dolly.bestilling.inntektsmelding.domain.InntektsmeldingRequest.Inntektsmelding;
-import static no.nav.dolly.bestilling.inntektsmelding.domain.InntektsmeldingRequest.JoarkMetadata;
-import static no.nav.dolly.bestilling.inntektsmelding.domain.InntektsmeldingRequest.Kontaktinformasjon;
 import static no.nav.dolly.util.NullcheckUtil.nullcheckSetDefaultValue;
 
 @Component
 public class InntektsmeldingMappingStrategy implements MappingStrategy {
 
-    private static Kontaktinformasjon getFiktivKontaktinformasjon() {
+    private static RsKontaktinformasjon getFiktivKontaktinformasjon() {
 
-        return Kontaktinformasjon.builder()
+        return RsKontaktinformasjon.builder()
                 .kontaktinformasjonNavn("Dolly Dollesen")
                 .telefonnummer("99999999")
                 .build();
@@ -41,12 +41,12 @@ public class InntektsmeldingMappingStrategy implements MappingStrategy {
                                         InntektsmeldingRequest inntektsmelding, MappingContext context) {
 
                         if (isNull(rsInntektsmelding.getJoarkMetadata())) {
-                            inntektsmelding.setJoarkMetadata(new JoarkMetadata());
+                            inntektsmelding.setJoarkMetadata(new RsJoarkMetadata());
                         }
                         inntektsmelding.getJoarkMetadata().setAvsenderMottakerIdType(
-                                !inntektsmelding.getInntekter().isEmpty() &&
-                                        nonNull(inntektsmelding.getInntekter().get(0).getArbeidsgiver()) ?
-                                        Avsendertype.ORGNR : Avsendertype.FNR
+                                (!inntektsmelding.getInntekter().isEmpty() &&
+                                        nonNull(inntektsmelding.getInntekter().getFirst().getArbeidsgiver()) ?
+                                        Avsendertype.ORGNR : Avsendertype.FNR).name()
                         );
                         inntektsmelding.setArbeidstakerFnr((String) context.getProperty("ident"));
                     }
@@ -54,14 +54,14 @@ public class InntektsmeldingMappingStrategy implements MappingStrategy {
                 .byDefault()
                 .register();
 
-        factory.classMap(RsInntektsmelding.Inntektsmelding.class, Inntektsmelding.class)
+        factory.classMap(RsInntektsmelding.Inntektsmelding.class, RsInntektsmeldingRequest.class)
                 .customize(new CustomMapper<>() {
                     @Override
                     public void mapAtoB(RsInntektsmelding.Inntektsmelding rsInntektsmelding,
-                                        Inntektsmelding inntektsmelding, MappingContext context) {
+                                        RsInntektsmeldingRequest inntektsmelding, MappingContext context) {
 
                         inntektsmelding.setAarsakTilInnsending(
-                                nullcheckSetDefaultValue(rsInntektsmelding.getAarsakTilInnsending(), AarsakTilInnsendingType.NY));
+                                nullcheckSetDefaultValue(inntektsmelding.getAarsakTilInnsending(), AarsakInnsendingKodeListe.NY));
 
                         if (nonNull(inntektsmelding.getArbeidsgiver()) &&
                                 isNull(inntektsmelding.getArbeidsgiver().getKontaktinformasjon())) {
@@ -74,7 +74,7 @@ public class InntektsmeldingMappingStrategy implements MappingStrategy {
                                     getFiktivKontaktinformasjon());
                         }
                         if (isNull(inntektsmelding.getAvsendersystem())) {
-                            inntektsmelding.setAvsendersystem(Avsendersystem.builder()
+                            inntektsmelding.setAvsendersystem(RsAvsendersystem.builder()
                                     .innsendingstidspunkt(LocalDateTime.now())
                                     .build());
                         }
